--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "clone": "^2.1.2",
-    "node-sass": "^7.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "typescript": "^3.9.5"
@@ -61,6 +60,7 @@
     "rollup-plugin-filesize": "^6.2.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-typescript2": "^0.25.3"
+    "rollup-plugin-typescript2": "^0.25.3",
+    "sass": "^1.62.1"
   }
 }
